<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.saymewhy.forfriend.testdevapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.saymewhy.forfriend.testdevapp.ui.market.MarketFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_post_offer"
        android:name="com.saymewhy.forfriend.testdevapp.ui.post_offer.PostOfferFragment"
        android:label="@string/title_post_offer"
        tools:layout="@layout/fragment_post_offer" />

    <fragment
        android:id="@+id/navigation_updates"
        android:name="com.saymewhy.forfriend.testdevapp.ui.updates.UpdatesFragment"
        android:label="updates_fragment"
        tools:layout="@layout/fragment_updates" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.saymewhy.forfriend.testdevapp.ui.profile.ProfileFragment"
        android:label="profile_fragment"
        tools:layout="@layout/fragment_profile" />
</navigation>