<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/market_rv_item_backg"
    android:paddingBottom="15dp">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/market_layout_cop_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/market_cop_layout_coroner"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtCOP"
            style="@style/MarketRVtxtCOP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3,020 COP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/MarketRVtxtExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCOP" />


    </android.support.constraint.ConstraintLayout>

    <Button
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/market_rv_item_base_txt_margin_end"
        android:background="@drawable/btn_buy_backg"
        android:text="@string/txt_buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/market_layaut_user_cop_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/market_rv_item_base_txt_margin_start"
        android:layout_marginTop="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/market_layout_cop_container">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/market_rv_item_user_img"
                android:layout_width="18dp"
                android:layout_height="18dp"

                android:src="@color/gray" />
        </android.support.v7.widget.CardView>

        <TextView
            style="@style/MarketRVtxtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alice Lees" />
    </LinearLayout>

    <TextView
        android:id="@+id/market_rv_item_layaut_txt_available"
        style="@style/MarketRVtxtUserDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/market_rv_item_base_txt_margin_start"
        android:layout_marginTop="4dp"
        android:text="@string/market_rv_item_txt_available"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/market_layaut_user_cop_container" />

    <TextView
        android:id="@+id/market_rv_item_num_available"
        style="@style/MarketRVtxtUserDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:text="2,000"
        app:layout_constraintLeft_toRightOf="@id/market_rv_item_layaut_txt_available"
        app:layout_constraintTop_toBottomOf="@id/market_layaut_user_cop_container" />

    <TextView
        style="@style/MarketRVtxtUserDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/baud"
        app:layout_constraintLeft_toRightOf="@id/market_rv_item_num_available"
        app:layout_constraintTop_toBottomOf="@id/market_layaut_user_cop_container" />

    <TextView
        android:id="@+id/market_rv_item_layaut_txt_order_amount"
        style="@style/MarketRVtxtUserDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/market_rv_item_base_txt_margin_start"
        android:layout_marginTop="4dp"
        android:text="@string/market_rv_item_txt_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/market_rv_item_layaut_txt_available" />

    <TextView
        android:id="@+id/market_rv_item_num_order_amount"
        style="@style/MarketRVtxtUserDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:text="100-500"
        app:layout_constraintLeft_toRightOf="@id/market_rv_item_layaut_txt_order_amount"
        app:layout_constraintTop_toBottomOf="@id/market_rv_item_layaut_txt_available" />

    <TextView
        style="@style/MarketRVtxtUserDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/baud"
        app:layout_constraintLeft_toRightOf="@id/market_rv_item_num_order_amount"
        app:layout_constraintTop_toBottomOf="@id/market_rv_item_layaut_txt_available" />


</android.support.constraint.ConstraintLayout>